trying to put a box on the camera view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         </activity>
         <activity android:name=".ToMorseActivity" />
         <activity android:name=".ToTextActivity"></activity>
+        <activity android:name=".readLight"></activity>
     </application>
 
 </manifest>
