Established Wave Analyzer, listens for audio now needs logic to officially translate

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ToMorseActivity" />
-        <activity android:name=".ToTextActivity"></activity>
+        <activity android:name=".ToTextActivity" />
+        <activity android:name=".MainAudioTranslation" />
     </application>
 
 </manifest>
