--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".ToMorseActivity" />
         <activity android:name=".ToTextActivity" />
         <activity android:name=".MainAudioTranslation" />
+        <activity android:name=".LightSensor" />
     </application>
 
 </manifest>
