--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".ToTextActivity" />
         <activity android:name=".MainAudioTranslation" />
         <activity android:name=".LightSensor" />
+        <activity android:name=".MorseToWhat" />
     </application>
 
 </manifest>
